--- a/Client/src/components/Styles/Register.css
+++ b/Client/src/components/Styles/Register.css
@@ -28,12 +28,9 @@
 }
 
 .RegisterForm label {
-    margin-bottom: 5px;
     font-weight: bold;
-    margin-left: auto;
-    margin-right: auto;
     font-family: "Kode Mono", monospace;
-    margin: 5px;
+    margin: 5px auto 5px auto;
 }
 
 .RegisterForm input {
@@ -58,7 +55,6 @@
     padding: 10px;
     background: linear-gradient(to bottom, rgb(0, 0, 48), rgb(0, 0, 95));   
     color: white;
-    border: 1px solid rgb(255, 255, 255);
     border: none;
     border-radius: 4px;
     font-size: 14px;
