--- a/Client/src/components/Styles/Add.css
+++ b/Client/src/components/Styles/Add.css
@@ -2,15 +2,37 @@
     display: flex;
     align-items: center; 
     justify-content: center;
-    border: 1px solid black;
     margin-left:auto ;
     margin-right:auto ;
+    background: white;
+    margin-top: 2rem;
+    width: 25rem;
+    height: 2rem;
+    border-radius: 20px;
+    border: 1px solid #A0522D;
+    
 }
 .addSearch input{
-    margin: 30px;
+    height: 2rem;
+    width: 20rem;
+    font-size: 1rem;
+    padding-left: 7px;
+    font-style: italic;
+    border: none;
+    outline: none;
+    background:none;
+    
 }
 .addSearch button{
-    margin: 30px;
+    height: 2rem;
+    width: 6rem;
+    background-color: #A0522D;
+    border-radius: 20px;
+    border: none;
+    color: white;
+    font-size: 1rem;
+
+
 }
 .searchResults{
     display: grid;
@@ -19,26 +41,31 @@
     margin : 5vh;
 }
 .searchResult{
-    border: 1px solid black;
+    border: 5px solid rgb(51, 35, 35);
     padding : 8%;
-    height: 50vh;
+    height: 40vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 1vh;
-    
+    box-shadow: 2px 2px 4px rgb(50, 50, 50);
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.253);
 }
 .searchResult h3{
     margin: 10px;
     text-align: center;
+    font-size: 2dvh;
+    color: rgb(255, 255, 255);
+    font-family:Georgia, 'Times New Roman', Times, serif;
 }
 .searchResult button{
     margin: 10px;
     width: 80%;
 }
 .searchResult img{
-    width: 85%;
-    height: 70%;
+    width: 80%;
+    height: 80%;
 }
 .loadMore{
     margin: 30px;
