--- a/Client/src/components/Styles/Spotify.css
+++ b/Client/src/components/Styles/Spotify.css
@@ -1,21 +1,169 @@
-.Spotify{
-    border: 1px solid black;
-    margin : 1vh;
-    padding: 1vh;
+.Spotify {
+  border: 2px solid black;
+  margin: 1vh;
+  padding: 1vh;
+  border-radius: 20px;
+  background-color: #c49ddc;
+}
+.App-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1rem;
+}
+.SpotifyLogo {
+  height: 4rem;
+}
+.Spotify header {
+  text-align: center;
+}
+.SpotifyData {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 1rem;
+}
+.SpotifyPlayer {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.SpotifyLiked {
+  width: 25vw;
+}
+.SpotifyGetButton {
+  display: flex;
+  justify-content: center;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 7rem;
+  background-color: #000;
+  color: #c49ddc;
+  font-size: 1rem;
+}
+.SpotifyButtons {
+  display: flex;
+  justify-content: space-around;
+}
+.SpotifyButtons button {
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 7rem;
+  background-color: #000;
+  color: #c49ddc;
+  font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+.SpotifyLoginButton,
+.SpotifyLogoutButton {
+  border: none;
+  padding: 0.5rem 2rem;
+  border-radius: 5rem;
+  background-color: #000;
+  color: #c49ddc;
+  font-size: 0.8rem;
+}
+.SpotifyLoginButton a {
+  text-decoration: none;
+  color: #c49ddc;
+}
 
+.CurrentSong {
+  font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  justify-content: center;
 }
-.Spotify header{
-    text-align: center;
+
+.LikedSongsContainer {
+  max-height: 50vh;
+  overflow-y: auto;
+  border: 1px solid #ccc;
 }
-.SpotifyData{
-display: flex;
-justify-content: space-around;
+.SpotifyLiked .LikedSong {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
 }
-.SpotifySearch{}
-.SpotifyLiked{
-    width: 25%;
+
+.PlayButton {
+  width: 4rem;
+  height: 4rem;
+  color: rgba(255, 255, 255, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  border-radius: 20px;
+  
 }
-.SpotifyButtons{
+.PlayButton :hover{
+  color: rgba(255, 255, 255, 1);
+}
+
+
+.SearchInputSpotify {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: none;
+  width: 25rem;
+  height: 2rem;
+  border-radius: 20px;
+  border: 1px solid black;
+}
+.SearchInputSpotify button {
+  background-color: black;
+  color: #c49ddc;
+  border: none;
+
+  border-radius: 0 3rem 3rem 0;
+  height: 100%;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+}
+.SearchInputSpotify select {
+  background-color: black;
+  color: #c49ddc;
+  border: none;
+
+  border-radius: 3rem 0 0 3rem;
+  height: 100%;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+}
+/* .SearchInputSpotify select option:hover {
+  background-color: black;
+} */
+.SearchInputSpotify input {
+  background: none;
+  color: black;
+  border: none;
+  height: 100%;
+    width: 100%;
+  font-size: 1rem;
+  outline: none;
+  padding-left: 10px;
+}
+.searchResultsSpotify{
+    margin: 5px;
+    border: 1px solid black;
+    background-color: #262626;
+    color: white;
+    border-radius: 20px;
+    padding: 1rem .5rem ;
+}
+.searchItem{
+    border: 1px solid white;
     display: flex;
-    justify-content: space-around;
+    background-color:#1f1f1f;
+    margin: .3rem;
+    border-radius: 20px;
+    /* padding: .5rem; */
+   
+    gap: 1rem;
 }
