--- a/Client/src/components/Styles/Spotify.css
+++ b/Client/src/components/Styles/Spotify.css
@@ -98,11 +98,15 @@
   justify-content: center;
   align-items: center;
   font-size: 2rem;
-  border-radius: 20px;
+  border-radius: 10px;
+  transition: background-color 0.3s ease, color 0.3s ease
   
 }
-.PlayButton :hover{
+.PlayButton:hover{
   color: rgba(255, 255, 255, 1);
+  /* background-color: #000; */
+  background-color: rgba(0, 0, 0, 0.5);
+ 
 }
 
 
@@ -152,18 +156,21 @@
 .searchResultsSpotify{
     margin: 5px;
     border: 1px solid black;
-    background-color: #262626;
+    /* background-color: #262626; */
     color: white;
-    border-radius: 20px;
-    padding: 1rem .5rem ;
+    border-radius: 10px;
+    padding: .1rem ;
 }
 .searchItem{
     border: 1px solid white;
     display: flex;
-    background-color:#1f1f1f;
+    background-color:rgb(0,0,0, .2);
     margin: .3rem;
-    border-radius: 20px;
-    /* padding: .5rem; */
+    border-radius: 10px;
+    padding: .25rem;
    
     gap: 1rem;
+}
+.LikedSongsContainer:empty {
+  display: none;
 }
