--- a/Client/src/components/Styles/Nav.css
+++ b/Client/src/components/Styles/Nav.css
@@ -1,5 +1,5 @@
 :root{
-    --gradient : linear-gradient(to bottom, rgb(0, 0, 48), rgb(0, 0, 95));
+    --gradient : linear-gradient(90deg, #4a00e0, #8e2de2 );
 }
 nav {
     display: flex;
